# gen-image

./: .gitignore  CHANGELOG.md  Justfile  PRD.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md  index.md  installation.md  providers.md  styles-templates.md  usage.md
docs/specs/: 2026-06-28-reference-cast-system-design.md
src/gen_image/: __init__.py  cli.py  config.py  cost_tracker.py  gemini_generator.py  generator.py  interactive.py  styles.py  templates.py  utils.py
templates/: educational-metaphor.txt  metaphor-mapping.txt  mnemonic-vocab.txt  spectrum-triad.txt  thought-experiment.txt  visual-comparison.txt
tests/: conftest.py  test_config.py  test_cost_tracker.py  test_error_handling.py  test_styles.py  test_templates.py  test_utils.py
